--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
       </div>
       <!--//upper-row-->
       <div class="upper-row">
-        <div class="company">Personal photo blog</div>
+        <div class="company">PHOTOGRAPHY</div>
         <div class="links">
           <ul>
             <li><a href="https://ysm0622.github.io/photo" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></li>
