--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -5,7 +5,7 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Software Engineer</h3>
-        <div class="time">2017.6 - Present</div>
+        <div class="time">2017.6 - 2017.8</div>
       </div>
       <!--//upper-row-->
       <div class="upper-row">
@@ -15,7 +15,7 @@
       </>
       <!--//meta-->
       <div class="details">
-        <p>Development android application with fabric touch device.</p>
+        <p>Developed android demo application with fabric touch device using bluetooth / ble communication.</p>
       </div>
       <!--//details-->
     </div>
@@ -35,7 +35,7 @@
       </div>
       <!--//meta-->
       <div class="details">
-        <p>Created OpenVPN with using Amazon Web Service(AWS) for client information security in SymphonyRM which is Customer Relationship Management(CRM) company in PeopleSpace.</p>
+        <p>Created OpenVPN Tunneling with using Amazon Web Service(AWS), SSH Tunnel(PuTTy) for client information security in SymphonyRM which is Customer Relationship Management(CRM) company in PeopleSpace.</p>
         <!-- <p>Attended in the International Consumer Electronics Show(CES) 2017 which held in Las Vegas, NV.</p> -->
       </div>
       <!--//details-->
