--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -25,6 +25,7 @@
     </div>
     <!--//meta-->
     <div class="details">
+      <p>Planned and made presentation about new hardware device products to solve problem of unidirectional exhibition.</p>
       <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
       <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -77,11 +78,12 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Gachon University</div>
+        <div class="links"><a href="https://www.slideshare.net/ssuserda2059/deep-reinforcement-learning-79443626" class="view-on-github" target="_blank"><i class="fa fa-slideshare"></i></a></div>
       </div>
     </div>
     <!--//meta-->
     <div class="details">
-      <p>Made presentation about 'Deep reinforcement learning'.</p>
+      <p>Made presentation about fundamental description about Deep Reinforcement Learning with "Human-level Control Through Deep Reinforcement Learning" NIPS 2015 paper.</p>
     </div>
     <!--//details-->
   </div>
@@ -124,6 +126,7 @@
     </div>
     <!--//meta-->
     <div class="details">
+      <p>Presented about graduation thesis.</p>
       <p>Participated the winter conference hosted by Korean Institute of Information Scientists and Engineers.</p>
       <p></p>
       <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -171,11 +174,21 @@
     <div class="meta">
       <div class="upper-row">
         <h3 class="job-title">Smartphone Education for the Aged</h3>
+        <div id="act5" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/smartphone_education1.png" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="time">2016</div>
       </div>
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Sujeong Senior Welfare Center</div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-camera"></i></a></div>
       </div>
     </div>
     <!--//meta-->
