--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -86,7 +86,7 @@
         <div class="company">Solar System Simulation</div>
         <div class="links">
           <ul>
-            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github" target="_blank"><i class="fa fa-video-camera"></i></a></li>
+            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
             <li><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
           </ul>
         </div>
