--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -51,7 +51,7 @@
       <h3 class="job-title">Certifications</h3><br>
       <div class="upper-row">
         <span class="project-tagline">TOPCIT Score 412 <br>(Ranked within top 9.6%) - Tier 3</span>
-        <div id="act5" class="modal fade" tabindex="-1" role="dialog">
+        <div id="cer1" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body">
@@ -61,12 +61,12 @@
           </div>
         </div>
         <div class="time">2017</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-file-text"></i></a></div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#cer1"><i class="fa fa-file-text"></i></a></div>
       </div>
       <p>
         <div class="upper-row">
           <span class="project-tagline">Information equipment technician</span>
-          <div id="act6" class="modal fade" tabindex="-1" role="dialog">
+          <div id="cer2" class="modal fade" tabindex="-1" role="dialog">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-body">
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="time">2010</div>
-          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-file-text"></i></a></div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#cer2"><i class="fa fa-file-text"></i></a></div>
         </div>
     </div>
   </div>
