--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -4,6 +4,7 @@
 <li>Machine Learning </li>
 <li>Reinforcement Learning </li>
 <li>Photographing </li>
+<li>Traveling </li>
 <!-- <li>Photographing </li>
 <li>Snowboarding </li>
 <li>Traveling </li> -->
