--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,6 +4,42 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
+        <h3 class="job-title">9XD Hackathon</h3>
+        <div id="act6" class="modal fade" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <img src="{{ site.baseurl }}/assets/images/9xdhackathon1.JPG" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="links"><a href="{{ site.baseurl }}/assets/images/arthackathon1.JPG" class="popup view-on-github"><i class="fa fa-camera"></i></a></div> -->
+        <div class="time">2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="upper-row">
+        <div class="company">Seoul, Korea</div>
+        <div class="links"><a href="https://photos.google.com/share/AF1QipP2wJS9kRii_U-UNczlXiOubnAy0UZSmkK43spNOJ1RZDCEoGjkj2R53PM8kq0Rnw?key=aGFtTXhTWTZpVHU3WnlqZlhWQXhTb3VHSTFKTFJ3" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></div>
+        <div class="links"><a href="https://github.com/hwitticus/salaryLupin" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-camera"></i></a></div>
+      </div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed 'SalaryLupin' which calculate and display 'Lupin Rate' by Google Chrome Extension.</p>
+      <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
+      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                         <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                         <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
+
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
         <h3 class="job-title">Art Hackathon</h3>
         <div id="act1" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
