--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -20,111 +20,114 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Seoul, Korea</div>
-        <div class="links"><a href="https://photos.google.com/share/AF1QipP2wJS9kRii_U-UNczlXiOubnAy0UZSmkK43spNOJ1RZDCEoGjkj2R53PM8kq0Rnw?key=aGFtTXhTWTZpVHU3WnlqZlhWQXhTb3VHSTFKTFJ3" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></div>
-        <div class="links"><a href="https://github.com/hwitticus/salaryLupin" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-camera"></i></a></div>
+        <div class="links">
+          <ul>
+            <li><a href="https://photos.google.com/share/AF1QipP2wJS9kRii_U-UNczlXiOubnAy0UZSmkK43spNOJ1RZDCEoGjkj2R53PM8kq0Rnw?key=aGFtTXhTWTZpVHU3WnlqZlhWQXhTb3VHSTFKTFJ3" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></li>
+            <li><a href="https://github.com/hwitticus/salaryLupin" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a class="view-on-github" data-toggle="modal" data-target="#act6"><i class="fa fa-camera"></i></a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Developed 'SalaryLupin' which calculate and display 'Lupin Rate' by Google Chrome Extension.</p>
-      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!--//meta-->
+      <div class="details">
+        <p>Developed 'SalaryLupin' which calculate and display 'Lupin Rate' by Google Chrome Extension.</p>
+        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+      </div>
+      <!--//details-->
     </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
-  <div class="item">
-    <div class="meta">
-      <div class="upper-row">
-        <h3 class="job-title">Art Hackathon</h3>
-        <div id="act1" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img src="{{ site.baseurl }}/assets/images/arthackathon2.JPG" class="img-responsive">
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Art Hackathon</h3>
+          <div id="act1" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img src="{{ site.baseurl }}/assets/images/arthackathon2.JPG" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
+          <!-- <div class="links"><a href="{{ site.baseurl }}/assets/images/arthackathon1.JPG" class="popup view-on-github"><i class="fa fa-camera"></i></a></div> -->
+          <div class="time">2017</div>
         </div>
-        <!-- <div class="links"><a href="{{ site.baseurl }}/assets/images/arthackathon1.JPG" class="popup view-on-github"><i class="fa fa-camera"></i></a></div> -->
-        <div class="time">2017</div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">GyeongGi, Korea</div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act1"><i class="fa fa-camera"></i></a></div>
+        </div>
       </div>
-      <!--//upper-row-->
-      <div class="upper-row">
-        <div class="company">GyeongGi, Korea</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act1"><i class="fa fa-camera"></i></a></div>
-      </div>
-    </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Planned and made presentation about new hardware device products to solve problem of unidirectional exhibition.</p>
-      <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
-      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!--//meta-->
+      <div class="details">
+        <p>Planned and made presentation about new hardware device products to solve problem of unidirectional exhibition.</p>
+        <p>Received excellence Prize in Art Hackathon was held in SangSang Campus. </p>
+        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+      </div>
+      <!--//details-->
     </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
-  <div class="item">
-    <div class="meta">
-      <div class="upper-row">
-        <h3 class="job-title">Google Startup Weekend</h3>
-        <div id="act2" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img src="{{ site.baseurl }}/assets/images/gsw2017-1.JPG" class="img-responsive">
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Google Startup Weekend</h3>
+          <div id="act2" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img src="{{ site.baseurl }}/assets/images/gsw2017-1.JPG" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
+          <div class="time">2017</div>
         </div>
-        <div class="time">2017</div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">Seoul, Korea</div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act2"><i class="fa fa-camera"></i></a></div>
+        </div>
       </div>
-      <!--//upper-row-->
-      <div class="upper-row">
-        <div class="company">Seoul, Korea</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act2"><i class="fa fa-camera"></i></a></div>
-      </div>
-    </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Attended 23rd Google Startup Weekend - Seoul hackathon which was held in GDIC(Gaepo Digital Innovation Center).</p>
-      <p>Developed 'Cookie' application which deliver touching sentence for exhausted people on weekday morning.</p>
-      <p>Received 'BEST UX/UI' award in final judgement.</p>
-      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!--//meta-->
+      <div class="details">
+        <p>Attended 23rd Google Startup Weekend - Seoul hackathon which was held in GDIC(Gaepo Digital Innovation Center).</p>
+        <p>Developed 'Cookie' application which deliver touching sentence for exhausted people on weekday morning.</p>
+        <p>Received 'BEST UX/UI' award in final judgement.</p>
+        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-    </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
-
-  <div class="item">
-    <div class="meta">
-      <div class="upper-row">
-        <h3 class="job-title">Research Assistant</h3>
-        <div class="time">2017</div>
       </div>
-      <!--//upper-row-->
-      <div class="upper-row">
-        <div class="company">Gachon University</div>
-        <div class="links"><a href="https://www.slideshare.net/ssuserda2059/deep-reinforcement-learning-79443626" class="view-on-github" target="_blank"><i class="fa fa-slideshare"></i></a></div>
-      </div>
+      <!--//details-->
     </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Made presentation about fundamental description about Deep Reinforcement Learning with "Human-level Control Through Deep Reinforcement Learning" NIPS 2015 paper.</p>
-    </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
-  <!-- <div class="item">
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Research Assistant</h3>
+          <div class="time">2017</div>
+        </div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">Gachon University</div>
+          <div class="links"><a href="https://www.slideshare.net/ssuserda2059/deep-reinforcement-learning-79443626" class="view-on-github" target="_blank"><i class="fa fa-slideshare"></i></a></div>
+        </div>
+      </div>
+      <!--//meta-->
+      <div class="details">
+        <p>Made presentation about fundamental description about Deep Reinforcement Learning with "Human-level Control Through Deep Reinforcement Learning" NIPS 2015 paper.</p>
+      </div>
+      <!--//details-->
+    </div>
+    <!--//item-->
+
+    <!-- <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Attended Consumer Electronics Show(CES)</h3>
@@ -138,103 +141,103 @@
                     </div>
                 </div> -->
 
-  <div class="item">
-    <div class="meta">
-      <div class="upper-row">
-        <h3 class="job-title">KIISE Winter Conference</h3>
-        <div id="act3" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img src="{{ site.baseurl }}/assets/images/kiise.jpg" class="img-responsive">
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">KIISE Winter Conference</h3>
+          <div id="act3" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img src="{{ site.baseurl }}/assets/images/kiise.jpg" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
+          <div class="time">2016</div>
         </div>
-        <div class="time">2016</div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">Gangwon, Korea</div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act3"><i class="fa fa-camera"></i></a></div>
+        </div>
       </div>
-      <!--//upper-row-->
-      <div class="upper-row">
-        <div class="company">Gangwon, Korea</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act3"><i class="fa fa-camera"></i></a></div>
-      </div>
-    </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Presented about graduation thesis.</p>
-      <p>Participated the winter conference hosted by Korean Institute of Information Scientists and Engineers.</p>
-      <p></p>
-      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!--//meta-->
+      <div class="details">
+        <p>Presented about graduation thesis.</p>
+        <p>Participated the winter conference hosted by Korean Institute of Information Scientists and Engineers.</p>
+        <p></p>
+        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+      </div>
+      <!--//details-->
     </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
-  <div class="item">
-    <div class="meta">
-      <div class="upper-row">
-        <h3 class="job-title">Google Startup Weekend</h3>
-        <div id="act4" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img src="{{ site.baseurl }}/assets/images/gsw2016-1.jpg" class="img-responsive">
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Google Startup Weekend</h3>
+          <div id="act4" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img src="{{ site.baseurl }}/assets/images/gsw2016-1.jpg" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
+          <div class="time">2016</div>
         </div>
-        <div class="time">2016</div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">Seoul, Korea</div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act4"><i class="fa fa-camera"></i></a></div>
+        </div>
       </div>
-      <!--//upper-row-->
-      <div class="upper-row">
-        <div class="company">Seoul, Korea</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act4"><i class="fa fa-camera"></i></a></div>
-      </div>
-    </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Developed 'Monster Games' which is Location-Based Service(LBS) Game in Google Startup Weekend - Seoul hackathon that was held in Gachon univ.</p>
-      <p>Received 3rd place in final judgement.</p>
-      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <!--//meta-->
+      <div class="details">
+        <p>Developed 'Monster Games' which is Location-Based Service(LBS) Game in Google Startup Weekend - Seoul hackathon that was held in Gachon univ.</p>
+        <p>Received 3rd place in final judgement.</p>
+        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+      </div>
+      <!--//details-->
     </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
-  <div class="item">
-    <div class="meta">
-      <div class="upper-row">
-        <h3 class="job-title">Smartphone Education for the Aged</h3>
-        <div id="act5" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body">
-                <img src="{{ site.baseurl }}/assets/images/smartphone_education1.png" class="img-responsive">
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="job-title">Smartphone Education for the Aged</h3>
+          <div id="act5" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <img src="{{ site.baseurl }}/assets/images/smartphone_education1.png" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
+          <div class="time">2016</div>
         </div>
-        <div class="time">2016</div>
+        <!--//upper-row-->
+        <div class="upper-row">
+          <div class="company">Sujeong Senior Welfare Center</div>
+          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-camera"></i></a></div>
+        </div>
       </div>
-      <!--//upper-row-->
-      <div class="upper-row">
-        <div class="company">Sujeong Senior Welfare Center</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#act5"><i class="fa fa-camera"></i></a></div>
+      <!--//meta-->
+      <div class="details">
+        <p>Basic smartphone education for the aged in Sujeong senior welfare center during summer vacation.</p>
+        <p>Broadcasted in ABN which is Seongnam local broadcasting system.</p>
+        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
       </div>
+      <!--//details-->
     </div>
-    <!--//meta-->
-    <div class="details">
-      <p>Basic smartphone education for the aged in Sujeong senior welfare center during summer vacation.</p>
-      <p>Broadcasted in ABN which is Seongnam local broadcasting system.</p>
-      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-    </div>
-    <!--//details-->
-  </div>
-  <!--//item-->
+    <!--//item-->
 
 </section>
 <!--//section-->
