--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,31 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
+        <h3 class="job-title">NERO</h3>
+        <div class="time">2017</div>
+      </div>
+      <!--//upper-row-->
+      <div class="upper-row">
+        <div class="company">Named-Entity Recognition Optimizer</div>
+        <div class="links">
+          <ul>
+            <li><a href="https://github.com/teamNERO/NERO" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Developed Named-Entity Recognition Program by 'Bidirectional LSTM-CRFs' deep learning model.</p>
+      <p>Received Minister of Culture, Sports and Tourism Award(문화체육관광부장관상) at HCLT2017(The 29th Annual Conference on Human & Cognitive Language Technology)</p>
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
+
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
         <h3 class="job-title">Photo Blog</h3>
         <div class="time">2017</div>
       </div>
