Edit: simplified education section

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -11,7 +11,6 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>BSc in Computer Science</p>
-                        <p>Learned about Discrete Mathmatics, Web Programming, Data Structure, OOP, OS, Computer Graphics, Technology Management, Software Engineering, Mobile Programming, Business Administration, Data Mining, Distribute System, Network, Algorithm, Database, Statistics, Robotics, Marketing, Computer Architecture and Machine Learning. </p>
                         <p>Received university scholarship for academic excellence.</p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -40,7 +39,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Major : Computer Media Department
-                        <p>Learned about Fundimental Computer Architecture, Visual Basic, C, Java, JavaScript, PHP, JSP, ASP, Network, Probability and Statistics, Photoshop, Premiere Pro, HTML and CSS. </p>
+                        <p>Learned about Fundimental Computer Science and Design.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
