Edit: Design -> Graphic Design

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -39,7 +39,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Major : Computer Media Department
-                        <p>Learned about Fundimental Computer Science and Design.</p>
+                        <p>Learned about Fundimental Computer Science and Graphic Design.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
