--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -6,8 +6,13 @@
   <div class="country">
     <div class="item">
       <div class="upper-row">
-        <h3 class="job-title">Visited 11 Countries</h3><br>
+        <h3 class="job-title">Visited 12 Countries</h3><br>
         <div class="links"><a href="https://ysm0622.github.io/photo/" class="view-on-github" target="_blank"><i class="fa fa-camera"></i></a></div>
+      </div>
+      <div class="upper-row">
+        <p><img src="{{site.baseurl}}/assets/images/la.png" /> Laos (Conference & Travel)
+          <div class="time">2017</div>
+        </p>
       </div>
       <div class="upper-row">
         <p><img src="{{site.baseurl}}/assets/images/us.png" /> California, US (Intern & Travel)
