--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -1,49 +1,65 @@
 <section class="section projects-section">
-  <h2 class="section-title"><i class="fa fa-info"></i>Additional infomation</h2>
+  <h2 class="section-title">
+    <i class="fa fa-info"></i>Additional infomation</h2>
   <!-- <div class="intro">
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> -->
   <div class="country">
     <div class="item">
       <div class="upper-row">
-        <h3 class="job-title">Visited 12 Countries</h3><br>
-        <div class="links"><a href="https://ysm0622.github.io/photo/" class="view-on-github" target="_blank"><i class="fa fa-camera"></i></a></div>
+        <h3 class="job-title">Visited 12 Countries</h3>
+        <br>
+        <div class="links">
+          <a href="https://ysm0622.github.io/photo/" class="view-on-github" target="_blank">
+            <i class="fa fa-camera"></i>
+          </a>
+        </div>
       </div>
       <div class="upper-row">
-        <p><img src="{{site.baseurl}}/assets/images/la.png" /> Laos (Conference & Travel)
+        <p>
+          <img src="{{site.baseurl}}/assets/images/la.png" /> Laos (Conference & Travel)
           <div class="time">2017</div>
         </p>
       </div>
       <div class="upper-row">
-        <p><img src="{{site.baseurl}}/assets/images/us.png" /> California, US (Intern & Travel)
+        <p>
+          <img src="{{site.baseurl}}/assets/images/us.png" /> California, US (Intern & Travel)
           <div class="time">2017</div>
         </p>
       </div>
       <div class="upper-row">
-        <p><span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand (Volunteer activity)</span>
+        <p>
+          <span class="project-tagline">
+            <img src="{{site.baseurl}}/assets/images/th.png" /> Thailand (Volunteer activity)</span>
           <div class="time">2016</div>
         </p>
       </div>
       <div class="upper-row">
-        <p><span class="project-tagline">
-                       <img src="{{site.baseurl}}/assets/images/eu.png"/> EU (Overseas training & Travel)</span>
+        <p>
+          <span class="project-tagline">
+            <img src="{{site.baseurl}}/assets/images/eu.png" /> EU (Overseas training & Travel)</span>
           <div class="time">2016</div>
-          &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png" /> England /
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="{{site.baseurl}}/assets/images/gb.png" /> England /
           <img src="{{site.baseurl}}/assets/images/fr.png" /> France /
           <img src="{{site.baseurl}}/assets/images/ch.png" /> Swiss /
-          <img src="{{site.baseurl}}/assets/images/it.png" /> Italia <br> &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png" /> Austria /
+          <img src="{{site.baseurl}}/assets/images/it.png" /> Italia
+          <br> &nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="{{site.baseurl}}/assets/images/at.png" /> Austria /
           <img src="{{site.baseurl}}/assets/images/de.png" /> Germany /
           <img src="{{site.baseurl}}/assets/images/nl.png" /> Netherlands</p>
       </div>
       <div class="upper-row">
-        <p><span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span>
+        <p>
+          <span class="project-tagline">
+            <img src="{{site.baseurl}}/assets/images/ph.png" /> Philippines (Volunteer activity)</span>
           <div class="time">2014</div>
         </p>
         <div class="upper-row">
-          <p><span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong (Travel)</span></p>
+          <p>
+            <span class="project-tagline">
+              <img src="{{site.baseurl}}/assets/images/hk.png" /> Hongkong (Travel)</span>
+          </p>
           <!-- <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
         </div>
       </div>
@@ -53,9 +69,11 @@
   <br>
   <div class="certi">
     <div class="item">
-      <h3 class="job-title">Certifications</h3><br>
+      <h3 class="job-title">Certifications</h3>
+      <br>
       <div class="upper-row">
-        <span class="project-tagline">TOPCIT Score 412 <br>(Ranked within top 9.6%) - Tier 3</span>
+        <span class="project-tagline">TOPCIT Score 412
+          <br>(Ranked within top 9.6%) - Tier 3</span>
         <div id="cer1" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -66,7 +84,11 @@
           </div>
         </div>
         <div class="time">2017</div>
-        <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#cer1"><i class="fa fa-file-text"></i></a></div>
+        <div class="links">
+          <a class="view-on-github" data-toggle="modal" data-target="#cer1">
+            <i class="fa fa-file-text"></i>
+          </a>
+        </div>
       </div>
       <p>
         <div class="upper-row">
@@ -81,7 +103,11 @@
             </div>
           </div>
           <div class="time">2010</div>
-          <div class="links"><a class="view-on-github" data-toggle="modal" data-target="#cer2"><i class="fa fa-file-text"></i></a></div>
+          <div class="links">
+            <a class="view-on-github" data-toggle="modal" data-target="#cer2">
+              <i class="fa fa-file-text"></i>
+            </a>
+          </div>
         </div>
     </div>
   </div>
