--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,52 +1,79 @@
 <!-- Use icons from fontawesome when you are adding new item in the contact list  -->
 
 
-     <div class="sidebar-wrapper">
-            <div class="profile-container">
-                <img class="profile-img" src="{{ site.baseurl }}/assets/images/{% if site.pic %}{{ site.pic }}{% else %}profile.jpg{% endif %}" alt="profile picture" />
-                <h1 class="name">{% if site.name %}{{site.name}}{% else %}{% endif %}</h1>
-                <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}{% endif %}</h3>
-            </div><!--//profile-container-->
+<div class="sidebar-wrapper">
+  <div class="profile-container">
+    <img class="profile-img" src="{{ site.baseurl }}/assets/images/{% if site.pic %}{{ site.pic }}{% else %}profile.jpg{% endif %}"
+      alt="profile picture" />
+    <h1 class="name">{% if site.name %}{{site.name}}{% else %}{% endif %}</h1>
+    <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}{% endif %}</h3>
+  </div>
+  <!--//profile-container-->
 
-            <div class="contact-container container-block">
-                <ul class="list-unstyled contact-list">
+  <div class="contact-container container-block">
+    <ul class="list-unstyled contact-list">
 
-                   {% if site.email %}
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: {{site.email}}">{{site.email}}</a></li>
-                    {% else %}
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:alan.doe@website.com">alan.doe@website.com</a></li>
-                    {% endif %}
+      {% if site.email %}
+      <li class="email">
+        <i class="fa fa-envelope"></i>
+        <a href="mailto: {{site.email}}">{{site.email}}</a>
+      </li>
+      {% else %}
+      <li class="email">
+        <i class="fa fa-envelope"></i>
+        <a href="mailto:alan.doe@website.com">alan.doe@website.com</a>
+      </li>
+      {% endif %} {% if site.phone %}
+      <li class="phone">
+        <i class="fa fa-phone"></i>
+        <a href="tel:{{site.phone}}">{{site.phone}}</a>
+      </li>
+      {% else %}
+      <li class="phone">
+        <i class="fa fa-phone"></i>
+        <a href="tel:012 345 6789">012 345 6789</a>
+      </li>
+      {% endif %} {% if site.website %}
+      <li class="website">
+        <i class="fa fa-globe"></i>
+        <a href="http://{{site.website}}" target="_blank">{{site.website}}</a>
+      </li>
+      {% endif %} {% if site.linkedin %}
+      <li class="linkedin">
+        <i class="fa fa-linkedin"></i>
+        <a href="https://in.linkedin.com/in/{{site.linkedin}}" target="_blank">LinkedIn</a>
+      </li>
+      {% else %}
+      <li class="linkedin">
+        <i class="fa fa-linkedin"></i>
+        <a href="https://in.linkedin.com/in/sharath-kumar-87669956" target="_blank">linkedin.com/in/sharathdt</a>
+      </li>
+      {% endif %} {% if site.github %}
+      <li class="github">
+        <i class="fa fa-github"></i>
+        <a href="http://github.com/{{site.github}}" target="_blank">GitHub</a>
+      </li>
+      {% else %}
+      <li class="github">
+        <i class="fa fa-github"></i>
+        <a href="http://github.com/sharu725" target="_blank">github.com/sharu725</a>
+      </li>
+      {% endif %} {% if site.photo %}
+      <li class="photo">
+        <i class="fa fa-camera"></i>
+        <a href="https://ysm0622.github.io/photo" target="_blank">Photo Blog</a>
+      </li>
+      {% endif %}
+      <li class="github">
+          <i class="fa fa-globe"></i>
+          <a href="http://chrisy.tistory.com" target="_blank">Blog</a>
+        </li>
 
-                    {% if site.phone %}
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:{{site.phone}}">{{site.phone}}</a></li>
-                    {% else %}
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:012 345 6789">012 345 6789</a></li>
-                    {% endif %}
-
-                    {% if site.website %}
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://{{site.website}}" target="_blank">{{site.website}}</a></li>
-                    {% endif %}
-
-                    {% if site.linkedin %}
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/{{site.linkedin}}" target="_blank">LinkedIn</a></li>
-                    {% else %}
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/sharath-kumar-87669956" target="_blank">linkedin.com/in/sharathdt</a></li>
-                    {% endif %}
-
-                    {% if site.github %}
-                    <li class="github"><i class="fa fa-github"></i><a href="http://github.com/{{site.github}}" target="_blank">GitHub</a></li>
-                    {% else %}
-                    <li class="github"><i class="fa fa-github"></i><a href="http://github.com/sharu725" target="_blank">github.com/sharu725</a></li>
-                    {% endif %}
-
-                    {% if site.photo %}
-                    <li class="photo"><i class="fa fa-camera"></i><a href="https://ysm0622.github.io/photo" target="_blank">Photo Blog</a></li>
-                    {% endif %}
-
-                </ul>
-            </div><!--//contact-container-->
-           {% include language.html %}
-           {% include interests.html %}
+    </ul>
+  </div>
+  <!--//contact-container-->
+  {% include language.html %} {% include interests.html %}
 
 
-        </div><!--//sidebar-wrapper-->
+</div>
+<!--//sidebar-wrapper-->
