--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,33 @@
   <div class="item">
     <div class="meta">
       <div class="upper-row">
+        <h3 class="job-title">TS-Coin</h3>
+        <div class="time">2018</div>
+      </div>
+      <!--//upper-row-->
+      <div class="upper-row">
+        <div class="company">Simple Blockchain written by TypeScript</div>
+        <div class="links">
+          <ul>
+            <li><a href="https://github.com/ysm0622/ts-coin" class="view-on-github" target="_blank"><i
+              class="fa fa-github"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--//meta-->
+    <div class="details">
+      <p>Simple Blockchain implementation with Express, TypeScript.</p>
+      <p>Benchmarking at <a href="https://github.com/golbin/g-coin">g-coin</a> of <a href="https://github.com/golbin">golbin</a>.
+        (express, sha256, uuid4, tslint)</p>
+    </div>
+    <!--//details-->
+  </div>
+  <!--//item-->
+
+  <div class="item">
+    <div class="meta">
+      <div class="upper-row">
         <h3 class="job-title">NERO</h3>
         <div class="time">2017</div>
       </div>
@@ -12,7 +39,8 @@
         <div class="company">Named-Entity Recognition Optimizer</div>
         <div class="links">
           <ul>
-            <li><a href="https://github.com/teamNERO/NERO" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://github.com/teamNERO/NERO" class="view-on-github" target="_blank"><i
+              class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
@@ -20,7 +48,8 @@
     <!--//meta-->
     <div class="details">
       <p>Developed Named-Entity Recognition Program by 'Bidirectional LSTM-CRFs' deep learning model.</p>
-      <p>Received Minister of Culture, Sports and Tourism Award(문화체육관광부장관상) at HCLT2017(The 29th Annual Conference on Human & Cognitive Language Technology)</p>
+      <p>Received Minister of Culture, Sports and Tourism Award(문화체육관광부장관상) at HCLT2017(The 29th Annual Conference
+        on Human & Cognitive Language Technology)</p>
     </div>
     <!--//details-->
   </div>
@@ -37,8 +66,10 @@
         <div class="company">PHOTOGRAPHY</div>
         <div class="links">
           <ul>
-            <li><a href="https://ysm0622.github.io/photo" class="view-on-github" target="_blank"><i class="fa fa-link"></i></a></li>
-            <li><a href="https://github.com/ysm0622/photo" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://ysm0622.github.io/photo" class="view-on-github" target="_blank"><i
+              class="fa fa-link"></i></a></li>
+            <li><a href="https://github.com/ysm0622/photo" class="view-on-github" target="_blank"><i
+              class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
@@ -61,13 +92,16 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Real-time indoor people count</div>
-        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a href="https://github.com/PEOPLE-INSIDE/people-inside" class="view-on-github"
+                              target="_blank"><i class="fa fa-github"></i></a></div>
       </div>
     </div>
     <!--//meta-->
     <div class="details">
-      <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
-      <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
+      <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android
+        application.</p>
+      <p>Apply random forest which is machine learning algorithm for sensor data processing for high
+        performance.</p>
       <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
@@ -85,12 +119,14 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Group Schedule Manager (Android App)</div>
-        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a href="https://github.com/TeamWHEN/WHEN" class="view-on-github" target="_blank"><i
+          class="fa fa-github"></i></a></div>
       </div>
     </div>
     <!--//meta-->
     <div class="details">
-      <p>Developed group schedule management android application that find available intersection time of all group members.</p>
+      <p>Developed group schedule management android application that find available intersection time of all
+        group members.</p>
       <p>Registered at google app store.</p>
       <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
              <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -111,8 +147,10 @@
         <div class="company">Solar System Simulation</div>
         <div class="links">
           <ul>
-            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
-            <li><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.youtube.com/watch?v=YaPik26iVvU" class="view-on-github"
+                   target="_blank"><i class="fa fa-youtube-play"></i></a></li>
+            <li><a href="https://github.com/SolarSystemExplorer/sse" class="view-on-github" target="_blank"><i
+              class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
@@ -138,7 +176,8 @@
       <!--//upper-row-->
       <div class="upper-row">
         <div class="company">Self-balancing robot</div>
-        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github" target="_blank"><i class="fa fa-github"></i></a></div>
+        <div class="links"><a href="https://github.com/SegwayRobot/segway-robot" class="view-on-github"
+                              target="_blank"><i class="fa fa-github"></i></a></div>
       </div>
     </div>
     <!--//meta-->
